packages/infra/kubernetes/argocd/load_balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: argocd.k8s.saas.apptoku.com
    alb.ingress.kubernetes.io/group.name: "main-alb-group"
spec:
  ingressClassName: alb
  rules:
  - host: argocd.k8s.saas.apptoku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
      - argocd.k8s.saas.apptoku.com
    secretName: argocd-tls
